[package]
name = "quantlib-on-rust"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Toy project from https://github.com/dtolnay/cxx"
edition = "2021"
publish = false
repository = "https://github.com/dtolnay/cxx"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
